<resources>
    <string name="app_name">Super Mãe</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Criados -->
    <string name="sugestoes">Sugestões</string>
    <string name="consultas">Consultas</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="chat_mamaes">Chat Mamães</string>
    <string name="assistente">Assistente</string>
    <string name="logar">Entrar</string>
    <string name="title_activity_consulta">ConsultaActivity</string>
    <string name="title_activity_medicamento">MedicamentoActivity</string>
    <string name="buscar_cep">Buscar CEP</string>
    <string name="cadastrar">Cadastrar</string>

    <string name="cadastroMedicamento">Cadastro de Medicamento</string>
    <string name="cadastroConsulta">Cadastro de Consulta</string>
    <string name="configuracoes">Informações</string>

    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="primeira_gestacao">Seu primeiro filho?</string>
    <string name="qtde_cesarias">Já fez cesária? Se sim, quantas?</string>
    <string name="semana_gestacao">Está em qual semana?</string>
    <string name="posicao_feto">Qual a posição do feto?</string>

    <string name="qtde_filhos">Qtde. de filhos na barriga?</string>
    <string name="codigo_posto">Código do posto?</string>
    <string name="alterar">Alterar</string>


</resources>
