<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sugestoes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.hackathon.saude.supermae.ConfiguracoesActivity">

    <EditText
        android:id="@+id/ed_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nome" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/primeira_gestacao"
            android:textSize="20dp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_sim_primeira_gestacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sim" />

            <RadioButton
                android:id="@+id/radio_nao_primeira_gestacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nao" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/qtde_cesarias"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/qtde_cesarias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/semana_gestacao"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/semana_gestacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            android:inputType="number"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/posicao_feto"
        android:textSize="20dp" />

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/posicao1"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:src="@drawable/posicao1"/>

        <ImageView
            android:id="@+id/posicao2"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:src="@drawable/posicao2"/>

        <ImageView
            android:id="@+id/posicao3"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:src="@drawable/posicao3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/qtde_filhos"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/qtde_filhos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/codigo_posto"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/ed_codigo_posto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            android:inputType="number"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_cadastrar"
        android:padding="@dimen/button_padding"
        android:layout_margin="@dimen/button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:text="@string/alterar"/>

</LinearLayout>
