<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:layout_margin="40dp"
            android:id="@+id/viewPagerbackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#08ac016b" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpagerTop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:layout_gravity="center" />
    </FrameLayout>

    <Button
        android:id="@+id/btn_medicamentos"
        android:padding="@dimen/button_padding"
        android:layout_margin="@dimen/button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:text="@string/medicamentos"/>

    <Button
        android:id="@+id/btn_consultas"
        android:padding="@dimen/button_padding"
        android:layout_margin="@dimen/button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:text="@string/consultas"/>

    <Button
        android:padding="@dimen/button_padding"
        android:layout_margin="@dimen/button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:text="@string/assistente"/>

</LinearLayout>